tests/ui/eii/duplicate/duplicate1.stderr
error: multiple implementations of `#[eii1]`
  --> $DIR/auxiliary/impl1.rs:10:1
   |
LL | fn other(x: u64) {
   | ^^^^^^^^^^^^^^^^ first implemented here in crate `impl1`
   |
  ::: $DIR/auxiliary/impl2.rs:10:1
   |
LL | fn other(x: u64) {
   | ---------------- also implemented here in crate `impl2`
   |
   = help: an "externally implementable item" can only have a single implementation in the final artifact. When multiple implementations are found, also in different crates, they conflict

error: aborting due to 1 previous error

